changes for css gallery

--- a/index.html
+++ b/index.html
@@ -16,8 +16,35 @@
         </ul>
 </nav>
                 <h1 class="page-title"> ABIJITH K A </h1>
-                <p class="desc"> Hey there? My Name is Abijith Ka. I like to draw,  paint, illustrate and write. Here i would like to share the things i know. hope you enjoy it.
-</header>
+                <div class="gallery">
+		<figure class="gallery-item gallery-item1">
+		<img class="thumbnail" src="cover-bukaffe-updated-feb19.jpg">
+		</figure>
+
+<figure class="gallery-item gallery-item2">
+		<img class="thumbnail" src="img1.jpg">
+		</figure>
+
+<figure class="gallery-item gallery-item3">
+		<img class="thumbnail" src="img5.jpg">
+		</figure>
+
+<figure class="gallery-item gallery-item4">
+		<img class="thumbnail" src="capmarvel-wonderwomen-ver2.jpg">
+		</figure>
+
+<figure class="gallery-item gallery-item5">
+		<img class="thumbnail" src="totoro-sleep-ver3.png">
+		</figure>
+
+<figure class="gallery-item gallery-item6">
+		<img class="thumbnail" src="img2.jpg">
+		</figure>
+
+<!--<figure class="gallery-item gallery-item7">
+		<img class="thumbnail" src="your-name-mitsuha.png">
+		</figure> -->
+</div>
+
 		</body>
 </html>
-
