--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
-	
+	<title>Abijith K A </title>
                 <body>
 
 <header>
 		<nav>
         <ul>
-                <li><a href="#"><b>Home</b></a></li>
-                <li><a href="#"><b>About</b></a></li>
-                <li><a href="#"><b>Contact</b></a></li>
-                <li class="arc" style="float:left"><b> architecture.illustrator.writer</b></li>
+                <li><a class="bar" href="#"><b>Contact</b></a></li>
+                <li><a class="bar" href="about.html"><b>About</b></a></li>
+		<li><a class="bar" href="index.html"><b>Home</b></a></li>
+                <li class="arc" style="float:left"><b> architect.illustrator.writer</b></li>
         </ul>
 </nav>
                 <h1 class="page-title"> ABIJITH K A </h1>
