--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 </nav>
 
 <div>		
-	<img src="abi-2019-re"></img>
+	<img src="abi-2019-re.PNG">
 
 		<h1>Hello!</h1>
 		<h1>I am Abijith K A. </h1>
