--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<link href='http://fonts.googleapis.com/css?family=Time New Roman' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Times New Roman' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="about.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 	</head>
