changed low prof pic into webpage

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 </nav>
 
 <div>		
-	<img src="abi-2019-re.png">
+	<img src="abi-2019-r-small.png">
 
 		<h1>Hello!</h1>
 		<h1>I am Abijith K A. </h1>
