--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 <h1 class="page-title"> ABIJITH K A </h1>
                 <div class="gallery">
 		<figure class="gallery-item gallery-item1">
-		<img class="thumbnail" src="cover-bukaffe-updated-feb19.jpg">
+		<img class="thumbnail" src="r30-bukaffe.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item2">
-		<img class="thumbnail" src="img1.jpg">
+		<img class="thumbnail" src="r30.img1.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item3">
-		<img class="thumbnail" src="img5.jpg">
+		<img class="thumbnail" src="r30.img5.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item4">
@@ -34,11 +34,11 @@
 		</figure>
 
 <figure class="gallery-item gallery-item5">
-		<img class="thumbnail" src="totoro-sleep-ver3.png">
+		<img class="thumbnail" src="r30-capmarver.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item6">
-		<img class="thumbnail" src="img2.jpg">
+		<img class="thumbnail" src="r30.img2.jpg">
 		</figure>
 
 <!--<figure class="gallery-item gallery-item7">
