--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		</figure>
 
 <figure class="gallery-item gallery-item4">
-		<img class="thumbnail" src="capmarvel-wonderwomen-ver2.jpg">
+		<img class="thumbnail" src="r30-capmarver.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item5">
-		<img class="thumbnail" src="r30-capmarver.jpg">
+		<img class="thumbnail" src="r30-totoro.jpg">
 		</figure>
 
 <figure class="gallery-item gallery-item6">
